--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "2.7.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
+    "npm": "^6.13.4",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
